--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ matplotlib = "^3.4.3"
 scipy = "^1.7.2"
 pandas = "^1.3.4"
 numpy = "^1.21.4"
+flake8 = "^4.0.1"
+mypy = "^0.910"
+black = "^21.10b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
