--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ show_missing = true
 fail_under = 95
 
 [tool.mypy]
-strict = true
+strict = false
 pretty = true
 show_column_numbers = true
 show_error_codes = true
