--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,15 @@
 name = "tennisim"
 version = "0.1.0"
 description = "Simple pure python functions for simulating tennis matches"
-authors = ["mjam03 <markjamison03@gmail.com>"]
+authors = ["Mark Jamison <markjamison03@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/mjam03/tennisim"
 repository = "https://github.com/mjam03/tennisim"
+documentation = "https://mjam03.github.io/tennisim"
+
+[tool.poetry.urls]
+Changelog = "https://github.com/mjam03/tennisim/releases"
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<3.11"
