--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,23 +16,26 @@ Changelog = "https://github.com/mjam03/tennisim/releases"
 python = ">=3.7.1,<3.11"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-jupyterlab = "^3.2.2"
-matplotlib = "^3.4.3"
-scipy = "^1.7.2"
-pandas = "^1.3.4"
-numpy = "^1.21.4"
+# linters and testing framework
 flake8 = "^4.0.1"
-mypy = "^0.910"
 black = "^21.10b0"
-seaborn = "^0.11.2"
-jupyter-to-medium = "^0.2.4"
+mypy = "^0.910"
+pytest = "^5.2"
+pytest-cov = "^3.0.0"
 nox = "^2021.10.1"
 nox-poetry = "^0.8.6"
 coverage = {extras = ["toml"], version = "^6.1.2"}
-pytest-cov = "^3.0.0"
 Pygments = "^2.9.0"
 types-toml = "^0.10.1"
+# packages to play with outputs
+matplotlib = "^3.4.3"
+numpy = "^1.21.4"
+pandas = "^1.3.4"
+scipy = "^1.7.2"
+seaborn = "^0.11.2"
+# jupyter packages
+jupyterlab = "^3.2.2"
+jupyter-to-medium = "^0.2.4"
 
 # let pytest coverage know where code is
 [tool.coverage.paths]
@@ -47,6 +50,7 @@ source = ["tennisim"]
 show_missing = true
 fail_under = 95
 
+# settings for mypy type checking
 [tool.mypy]
 strict = false
 pretty = true
